--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,21 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashScreen">
-
-    <View
-        android:id="@+id/splashGradient"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:background="@drawable/gradient"
-        android:alpha="0.6"
-        />
-
-    <ImageView
-        android:id="@+id/splashGlideBackground"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+    tools:context=".Login">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/splashGLH1"
@@ -31,7 +17,7 @@
         />
 
     <ImageView
-        android:id="@+id/logoSplash"
+        android:id="@+id/loginLogo"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/dibujo"
@@ -41,16 +27,35 @@
         />
 
     <TextView
-        android:id="@+id/splasAppName"
+        android:id="@+id/loginAppName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        app:layout_constraintTop_toBottomOf="@+id/logoSplash"
+        app:layout_constraintTop_toBottomOf="@+id/loginLogo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:fontFamily="@font/retrovintageregular"
         android:textSize="40sp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="0dp"
         />
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/loginUserNameTIL"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/loginAppName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:startIconDrawable="@drawable/baseline_3p_24"
+    >
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Usuario"
+            android:inputType="textPersonName"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
